--- a/project.html
+++ b/project.html
@@ -41,11 +41,6 @@
         </ul>
         <ul class="navbar-nav ml-0 mb-2 mb-lg-0 icon">
           <li class="nav-item">
-            <a href="#" class="nav-link ">
-              <i id="toggle-mode" class="fa fa-moon " title="Toggle dark or light"></i>
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link "href="https://www.facebook.com/share/1AQhxJ2zKf/"><i class="fab fa-facebook"></i></a>
           </li>
           <li class="nav-item">
@@ -74,24 +69,65 @@
           <div class="card shadow border-0">
             <div class="card-body">
               <div class="image">
-                <img src="./images/w1.jpg" class="img-fluid rounded" alt="project">
+                <img src="./images/Screenshot (26).png" class="img-fluid rounded" alt="project">
               </div>
               <div class="my-4 d-flex justify-content-between">
-                <h5>Crypto Portfolio Design</h5>
+                <h5>Weather forecast</h5>
                 <i class="fas fa-ellipsis-v d-flex justify-content-center align-items-center border rounded-circle"></i>
               </div>
-              <small>A responsive and user-friendly crypto portfolio design with
-                features like real-time market data, portfolio tracking, and
-                more.</small>
+              <small>A responsive and user-friendly Weather forecast designed with
+                features like real-time weather data. </small>
               <div class="d-flex justify-content-between">
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">Preview
+                <a href="https://daysweatherforecast.netlify.app/" class="btn btn-success btn-sm my-4">Preview
                   <img
                     src="./images/paperclip-solid.svg"
                     width="18"
                     alt=""
                 /></a>
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
+                <a href="https://github.com/joe-spec" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
                 ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mt-3 mt-md-0">
+          <div class="card shadow border-0">
+            <div class="card-body">
+              <div class="image">
+                <img src="./images/Screenshot (27).png" class="img-fluid rounded" alt="project">
+              </div>
+              <div class="my-4 d-flex justify-content-between">
+                <h5>Portfolio Design</h5>
+                <i class="fas fa-ellipsis-v d-flex justify-content-center align-items-center border rounded-circle"></i>
+              </div>
+              <small>A responsive and user-friendly portfolio designed with
+                bootstrap</small>
+              <div class="d-flex justify-content-between">
+                <a href="https://portfoliojojo.netlify.app/" class="btn btn-success btn-sm my-4">Preview
+                  <img
+                    src="./images/paperclip-solid.svg"
+                    width="18"
+                    alt=""
+                /></a>
+                <a href="https://github.com/joe-spec" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mt-3 mt-md-0 ">
+          <div class="card shadow border-0">
+            <div class="card-body">
+              <div class="image">
+                <img src="./images/w1.jpg" class="img-fluid rounded" alt="project">
+              </div>
+              <div class="my-4 d-flex justify-content-between">
+                <h5>Simple graphics design</h5>
+                <i class="fas fa-ellipsis-v d-flex justify-content-center align-items-center border rounded-circle"></i>
+              </div>
+              <small>A Simple graphics design. </small>
+              <div class="d-flex justify-content-between">
+                
               </div>
             </div>
           </div>
@@ -103,21 +139,12 @@
                 <img src="./images/w2.jpg" class="img-fluid rounded" alt="project">
               </div>
               <div class="my-4 d-flex justify-content-between">
-                <h5>Crypto Portfolio Design</h5>
+                <h5>Simple graphics design</h5>
                 <i class="fas fa-ellipsis-v d-flex justify-content-center align-items-center border rounded-circle"></i>
               </div>
-              <small>A responsive and user-friendly crypto portfolio design with
-                features like real-time market data, portfolio tracking, and
-                more.</small>
+              <small>A Simple poster for your business.</small>
               <div class="d-flex justify-content-between">
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">Preview
-                  <img
-                    src="./images/paperclip-solid.svg"
-                    width="18"
-                    alt=""
-                /></a>
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
-                ></a>
+                
               </div>
             </div>
           </div>
