--- a/about.html
+++ b/about.html
@@ -41,11 +41,6 @@
         </ul>
         <ul class="navbar-nav ml-0 mb-2 mb-lg-0 icon">
           <li class="nav-item">
-            <a href="#" class="nav-link ">
-              <i id="toggle-mode" class="fa fa-moon " title="Toggle dark or light"></i>
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link "href="https://www.facebook.com/share/1AQhxJ2zKf/"><i class="fab fa-facebook"></i></a>
           </li>
           <li class="nav-item">
@@ -82,7 +77,7 @@
             for solving tech problems. <br>
             Experienced in building website, crafting compelling video content, and reparing hardware/software 
             issues. <br>
-            Driven by innovation and a mission to bring ideas to life through tecnoloyg and visuals.
+            Driven by innovation and a mission to bring ideas to life through technoloyg and visuals.
           </p>
           <div class="col-md-12 mt-5">
             <div class="row">
@@ -115,7 +110,7 @@
                   </div>
                   <div class="px-2 card-body">
                     <h5>Projects</h5>
-                    <p>Build more that 20 projects, repaired several PCs</p>
+                    <p>Built more that 20 projects, repaired several PCs and handled several video coverage</p>
                   </div>
                 </div>
               </div>
@@ -312,7 +307,7 @@
             <i class="fab fa-linkedin"></i></a>
           <a class="nav-link mx-1" href="https://www.instagram.com/joe__spec?igsh=Njl3azk4eHlraDhs"><i class="fab fa-instagram"></i></a>
           <a class="nav-link mx-1" href="https://www.github.com/joe-spec"><i class="fab fa-github"></i></a>          
-          <a class="nav-link mx-1" href="https://www.facebook.com/share/1AQhxJ2zKf/"><i class="fab fa-facebook"></i></a>
+          <a class="nav-link mx-1" href="https://www.facebook.com/share/1AQhxJ2zKf/"><i class="fab fa-facebook"></i></a>  
         </div>
       </div>
       <hr>
