--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body class="bg-dark">
+  
+  <div class="tra ">
+    <a href="#" class="nav-link text-light d-flex justify-content-end align-items-center">
+      <i id="toggle-mode" class="fa fa-moon " title="Toggle dark or light"></i>
+    </a>
+  </div>
   <nav class="navbar navbar-expand-lg sticky-top ">
     <div class="container-fluid">
       <a class="navbar-brand logo d-flex align-items-center" href="#">
@@ -41,11 +47,6 @@
         </ul>
         <ul class="navbar-nav ml-0 mb-2 mb-lg-0 icon">
           <li class="nav-item">
-            <a href="#" class="nav-link ">
-              <i id="toggle-mode" class="fa fa-moon " title="Toggle dark or light"></i>
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link "href="https://www.facebook.com/share/1AQhxJ2zKf/"><i class="fab fa-facebook"></i></a>
           </li>
           <li class="nav-item">
@@ -62,8 +63,8 @@
     </div>
   </nav>
   
-
-
+  
+  
   <!-- banner section -->
   <section class="home" id="home">
     <div class="container">
@@ -89,6 +90,7 @@
   </section>
 
 
+
   <!-- About section -->
   <section class="about" id="about">
     <div class="container">
@@ -108,7 +110,7 @@
             for solving tech problems. <br>
             Experienced in building website, crafting compelling video content, and reparing hardware/software 
             issues. <br>
-            Driven by innovation and a mission to bring ideas to life through tecnoloyg and visuals.
+            Driven by innovation and a mission to bring ideas to life through technoloyg and visuals.
           </p>
           <div class="col-md-12 mt-5">
             <div class="row">
@@ -141,7 +143,7 @@
                   </div>
                   <div class="px-2 card-body">
                     <h5>Projects</h5>
-                    <p>Build more that 20 projects, repaired several PCs</p>
+                    <p>Engaged in over 20 projects</p>
                   </div>
                 </div>
               </div>
@@ -176,23 +178,22 @@
           <div class="card shadow border-0">
             <div class="card-body">
               <div class="image">
-                <img src="./images/w1.jpg" class="img-fluid rounded" alt="project">
+                <img src="./images/Screenshot (26).png" class="img-fluid rounded" alt="project">
               </div>
               <div class="my-4 d-flex justify-content-between">
-                <h5>Crypto Portfolio Design</h5>
+                <h5>Weather forecast</h5>
                 <i class="fas fa-ellipsis-v d-flex justify-content-center align-items-center border rounded-circle"></i>
               </div>
-              <small>A responsive and user-friendly crypto portfolio design with
-                features like real-time market data, portfolio tracking, and
-                more.</small>
+              <small>A responsive and user-friendly Weather forecast designed with
+                features like real-time weather data. </small>
               <div class="d-flex justify-content-between">
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">Preview
+                <a href="https://daysweatherforecast.netlify.app/" class="btn btn-success btn-sm my-4">Preview
                   <img
                     src="./images/paperclip-solid.svg"
                     width="18"
                     alt=""
                 /></a>
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
+                <a href="https://github.com/joe-spec" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
                 ></a>
               </div>
             </div>
@@ -202,23 +203,47 @@
           <div class="card shadow border-0">
             <div class="card-body">
               <div class="image">
-                <img src="./images/w2.jpg" class="img-fluid rounded" alt="project">
+                <img src="./images/Screenshot (27).png" class="img-fluid rounded" alt="project">
               </div>
               <div class="my-4 d-flex justify-content-between">
-                <h5>Crypto Portfolio Design</h5>
+                <h5>Portfolio Design</h5>
                 <i class="fas fa-ellipsis-v d-flex justify-content-center align-items-center border rounded-circle"></i>
               </div>
-              <small>A responsive and user-friendly crypto portfolio design with
-                features like real-time market data, portfolio tracking, and
-                more.</small>
+              <small>A responsive and user-friendly portfolio designed with
+                bootstrap</small>
               <div class="d-flex justify-content-between">
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">Preview
+                <a href="https://portfoliojojo.netlify.app/" class="btn btn-success btn-sm my-4">Preview
                   <img
                     src="./images/paperclip-solid.svg"
                     width="18"
                     alt=""
                 /></a>
-                <a href="javascript:void()" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
+                <a href="https://github.com/joe-spec" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mt-3 mt-md-0">
+          <div class="card shadow border-0">
+            <div class="card-body">
+              <div class="image">
+                <img src="./images/Screenshot (30).png" class="img-fluid rounded" alt="project">
+              </div>
+              <div class="my-4 d-flex justify-content-between">
+                <h5>Portfolio Design</h5>
+                <i class="fas fa-ellipsis-v d-flex justify-content-center align-items-center border rounded-circle"></i>
+              </div>
+              <small>A responsive and user-friendly portfolio designed with
+                bootstrap</small>
+              <div class="d-flex justify-content-between">
+                <a href="https://joespec.netlify.app/" class="btn btn-success btn-sm my-4">Preview
+                  <img
+                    src="./images/paperclip-solid.svg"
+                    width="18"
+                    alt=""
+                /></a>
+                <a href="https://github.com/joe-spec" class="btn btn-success btn-sm my-4">github <i class="fab fa-github"></i
                 ></a>
               </div>
             </div>
@@ -241,7 +266,7 @@
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <form action="https://formsubmit.co/joedjango898@gmail.com" method="post" class="form">
+          <form action="https://formspree.io/f/xanbjbap" method="post" class="form">
             <div class="form-group">
               <label for="name" class="my-3">Name <span class="text-danger">*</span></label>
               <input class="form-control" name="name" type="text" id="name" required />
@@ -250,6 +275,7 @@
               <label for="email" class="my-3">Email <span class="text-danger">*</span></label>
               <input class="form-control" name="email" type="email" id="email" required />
             </div>
+            <input class="form-control" name="_redirect" type="hidden" value="https://joespec.netlify.app/"  />
             <div class="form-group">
               <label for="message" class="my-3">Message <span class="text-danger">*</span></label>
               <textarea class="form-control" name="message" required id="message" cols="30"></textarea>
